[gd_scene load_steps=6 format=4 uid="uid://du352tde2r63f"]

[ext_resource type="Script" path="res://multiplayer/lobby/MultiplayerLoadingMember.gd" id="1_b0ows"]
[ext_resource type="Texture2D" uid="uid://cpv1kmmpnhti5" path="res://graphics/default_avatar.png" id="2_3kqtn"]
[ext_resource type="FontVariation" uid="uid://k12lugi3q7n6" path="res://fonts/noto/NotoSans-Medium.tres" id="3_kygu2"]
[ext_resource type="Texture2D" uid="uid://b3lvuimnbuc7f" path="res://graphics/check.svg" id="5_xctbl"]
[ext_resource type="Texture2D" uid="uid://cfnmpwyjlgoc8" path="res://graphics/icons/refresh-big.svg" id="6_2p51j"]

[node name="MarginContainer" type="MarginContainer"]
custom_minimum_size = Vector2(300, 75)
offset_right = 583.0
offset_bottom = 78.0
size_flags_horizontal = 0
script = ExtResource("1_b0ows")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="AvatarTextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(78, 78)
layout_mode = 2
texture = ExtResource("2_3kqtn")
expand_mode = 3
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PersonaNameLabel" type="Label" parent="VBoxContainer/HBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
size_flags_vertical = 5
theme_override_fonts/font = ExtResource("3_kygu2")
text = "(NT)EIREXE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadingIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
texture = ExtResource("6_2p51j")
expand_mode = 5
stretch_mode = 5

[node name="LoadedIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
self_modulate = Color(0, 1, 0, 1)
layout_mode = 2
texture = ExtResource("5_xctbl")
expand_mode = 2
